tests/files/type_checker_tests/should_pass/052.cmdr
//Test that ternary operations type check
x = 1;
y = if (2.0, true, 3)[x] then (2.0, true, 3) else (2.0, true, 3);
