tests/files/type_checker_tests/should_fail/094.cmdr
//Should fail if ternary items do not match
x = if true then 2.3 else 1;
